--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+            android:usesCleartextTraffic="true"
             android:name="com.projects.valerian.vocabularylist.VocabularyApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
