--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,10 @@
                 android:label="@string/title_activity_login">
         </activity>
         <activity
+                android:name=".RegisterActivity"
+                android:label="@string/title_activity_login">
+        </activity>
+        <activity
                 android:name=".WordDetailActivity"
                 android:label="@string/title_activity_word_detail"
                 android:theme="@style/AppTheme.NoActionBar">
